manifests/installation/bare/onex/onex-nightwatch/deployment.yaml
# Copyright 2020 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: onex-nightwatch # 资源标签
  name: onex-nightwatch # 资源名称
spec:
  replicas: 1 # 副本数
  progressDeadlineSeconds: 10
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: onex-nightwatch
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: onex-nightwatch
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - onex-nightwatch
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - --config=/opt/onex/etc/onex-nightwatch.yaml
        image: ccr.ccs.tencentyun.com/onexstack/onex-nightwatch-amd64:v0.1.0
        name: onex-nightwatch
        ports:
        - containerPort: 54082
          name: http
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 54082
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 54082
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        startupProbe:
          httpGet:
            path: /healthz
            port: 54082
          failureThreshold: 10
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
        imagePullPolicy: IfNotPresent
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/onex/etc/onex-nightwatch.yaml
          name: onex-nightwatch
          subPath: onex-nightwatch.yaml
        - mountPath: /opt/onex/etc/config
          name: onex
          subPath: config
        - mountPath: /opt/onex/etc/cert
          name: onex-tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
      terminationGracePeriodSeconds: 5
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: onex-nightwatch.yaml
            path: onex-nightwatch.yaml
          name: onex-nightwatch
        name: onex-nightwatch
      - configMap:
          defaultMode: 420
          items:
          - key: config
            path: config
          name: onex
        name: onex
      - secret:
          defaultMode: 420
          secretName: onex-tls
        name: onex-tls
